<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_star"
            android:title="@string/menu_star" />
        <item
            android:id="@+id/nav_memorial"
            android:title="@string/menu_memorial" />
        <item
            android:id="@+id/nav_agenda"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_sharewm"
            android:title="@string/menu_sharewm" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/menu_search" />
    </group>
</menu>